--- a/hexapod_bringup/config/gazebo_bridge.yaml
+++ b/hexapod_bringup/config/gazebo_bridge.yaml
@@ -9,3 +9,117 @@
   ros_type_name: "tf2_msgs/msg/TFMessage"
   gz_type_name: "gz.msgs.Pose_V"
   direction: GZ_TO_ROS
+
+- ros_topic_name: "/clock"
+  gz_topic_name: "/clock"
+  ros_type_name: "rosgraph_msgs/msg/Clock"
+  gz_type_name: "gz.msgs.Clock"
+  direction: GZ_TO_ROS
+
+- ros_topic_name: "/joint/coxa_joint_l1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_l1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+  
+- ros_topic_name: "/joint/femur_joint_l1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_l1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_l1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_l1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/coxa_joint_l2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_l2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/femur_joint_l2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_l2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_l2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_l2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/coxa_joint_l3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_l3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/femur_joint_l3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_l3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_l3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_l3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/coxa_joint_r1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_r1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/femur_joint_r1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_r1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_r1/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_r1/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/coxa_joint_r2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_r2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/femur_joint_r2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_r2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_r2/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_r2/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+  
+- ros_topic_name: "/joint/coxa_joint_r3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/coxa_joint_r3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/femur_joint_r3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/femur_joint_r3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/joint/tibia_joint_r3/cmd_pos"
+  gz_topic_name: "/model/hexapod/joint/tibia_joint_r3/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
