--- a/hexapod_walk/package.xml
+++ b/hexapod_walk/package.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>hexapod_bringup</name>
+  <name>hexapod_walk</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="percival@todo.todo">percival</maintainer>
+  <maintainer email="raynscammander@gmail.com">percival</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <exec_depend>hexapod_description</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>hexapod_walk</exec_depend>
-  <exec_depend>ros_gz_sim</exec_depend>
+
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
